programs/nid/build/io-lifetimes-d95e6e698f3365fd/stderr
error[E0658]: use of unstable library feature 'io_safety'
 --> <anon>:2:5
  |
2 | use std::os::unix::io::OwnedFd as Owned;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: see issue #87074 <https://github.com/rust-lang/rust/issues/87074> for more information

error[E0658]: use of unstable library feature 'io_safety'
 --> <anon>:8:20
  |
8 | pub type Success = Owned;
  |                    ^^^^^
  |
  = note: see issue #87074 <https://github.com/rust-lang/rust/issues/87074> for more information

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:12
  |
1 | #![feature(wasi_ext)]
  |            ^^^^^^^^

error[E0635]: unknown feature `wasi_ext`
 --> <anon>:1:12
  |
1 | #![feature(wasi_ext)]
  |            ^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0554, E0635.
For more information about an error, try `rustc --explain E0554`.
warning: function is never used: `foo`
 --> <anon>:1:10
  |
1 | const fn foo() { panic!() }
  |          ^^^
  |
  = note: `#[warn(dead_code)]` on by default

warning: 1 warning emitted

